--- a/buildertron/forms/aboutdialog.ui
+++ b/buildertron/forms/aboutdialog.ui
@@ -17,7 +17,10 @@
    <item row="3" column="1">
     <widget class="QLabel" name="label_5">
      <property name="text">
-      <string>https://github.com/swprojects/Buildertron</string>
+      <string>&lt;a href='https://github.com/swprojects/Buildertron'&gt;https://github.com/swprojects/Buildertron&lt;/a&gt;</string>
+     </property>
+     <property name="openExternalLinks">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
@@ -82,7 +85,11 @@
    <item row="1" column="1">
     <widget class="QLabel" name="label_7">
      <property name="text">
-      <string>The MIT License - https://opensource.org/licenses/MIT</string>
+      <string>&lt;a href='https://opensource.org/licenses/MIT'&gt;The MIT License&lt;/a&gt;
+</string>
+     </property>
+     <property name="openExternalLinks">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
